--- a/frontend/templates/frontend/home.html
+++ b/frontend/templates/frontend/home.html
@@ -9,7 +9,7 @@
     <section id="home_two_banner">
         <div class="home_two_banner_slider_wrapper owl-carousel owl-theme">
             <div class="banner_two_slider_item fadeInUp" data-wow-duration="2s"
-                style="background-image: url(/static/assets/img/banner/banner-two-bg-1.png);">
+                style="background-image: url(/static/assets/img/banner/banner.jpg);">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-6">
