--- a/frontend/templates/frontend/header.html
+++ b/frontend/templates/frontend/header.html
@@ -57,8 +57,8 @@
             <div class="container">
                 <div class="main-responsive-menu">
                     <div class="logo">
-                        <a href="index.html">
-                            <img src="assets/img/logo.png" alt="logo">
+                        <a href="">
+                            <img src="/static/assets/img/akt_logo_l.pngg" alt="logo" width="70">
                         </a>
                     </div>
                 </div>
@@ -68,26 +68,16 @@
             <div class="container">
                 <nav class="navbar navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/img/logo.png" alt="logo">
+                        <img src="/static/assets/img/akt_logo_l.png" alt="logo" width="120">
                     </a>
                     <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="#" class="nav-link active">
+                                <a href="{% url 'home' %}" class="nav-link active">
                                     Home
                                     <i class="fas fa-angle-down"></i>
                                 </a>
-                                <ul class="dropdown-menu">
-                                    <li class="nav-item">
-                                        <a href="index.html" class="nav-link">Home One</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="index-2.html" class="nav-link active">Home Two</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="index-3.html" class="nav-link">Home Three</a>
-                                    </li>
-                                </ul>
+                                
                             </li>
                             <li class="nav-item">
                                 <a href="#" class="nav-link">
@@ -115,7 +105,7 @@
                             </li>
                             <li class="nav-item">
                                 <a href="#" class="nav-link">
-                                    Flights
+                                    Transfers
                                     <i class="fas fa-angle-down"></i>
                                 </a>
                                 <ul class="dropdown-menu">
@@ -130,6 +120,26 @@
                             <li class="nav-item">
                                 <a href="#" class="nav-link">
                                     Hotel
+                                    <i class="fas fa-angle-down"></i>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li class="nav-item">
+                                        <a href="hotel-search.html" class="nav-link">Hotel</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="hotel-details.html" class="nav-link">Hotel Booking</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="room-details.html" class="nav-link">Room Details</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="room-booking.html" class="nav-link">Room Booking</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">
+                                    Outbounds
                                     <i class="fas fa-angle-down"></i>
                                 </a>
                                 <ul class="dropdown-menu">
@@ -186,7 +196,7 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li class="nav-item">
-                                        <a href="about.html" class="nav-link">About</a>
+                                        <a href="{% url 'about' %}" class="nav-link">About</a>
                                     </li>
                                     <li class="nav-item">
                                         <a href="tour-guides.html" class="nav-link">Team</a>
@@ -195,7 +205,7 @@
                                         <a href="testimonials.html" class="nav-link">Testimonials</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="faqs.html" class="nav-link">FAQ</a>
+                                        <a href="{% url 'faq' %}" class="nav-link">FAQ</a>
                                     </li>
                                     <li class="nav-item">
                                         <a href="booking-confirmation.html" class="nav-link">Booking
@@ -276,7 +286,7 @@
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a href="contact.html" class="nav-link">Contact</a>
+                                <a href="{% url 'contact' %}" class="nav-link">Contact</a>
                             </li>
                         </ul>
                         <div class="others-options d-flex align-items-center">
